--- a/css/main.css
+++ b/css/main.css
@@ -609,4 +609,16 @@ nav:hover {
   right: 0;
 }
 
+.six .wrap {
+  width: 100%;
+  max-width: initial;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+@media (min-width: 750px) {
+  .six .wrap {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
