--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -400,7 +400,7 @@
       width: max-content;
       position: relative;
       padding-bottom: 0.5rem;
-      margin: 1.5rem 0 2rem;
+      margin: 0 0 1rem;
       &::after {
         content: "";
         display: block;
