--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -93,3 +93,14 @@ html {
     font-family: $fjall;
   }
 }
+
+.six {
+  h2 {
+    font-size: 2.875rem;
+    font-family: $fjall;
+    color: abstracts.$ind;
+  }
+  p {
+    font-size: 1.125rem;
+  }
+}
