--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -417,6 +417,9 @@
   }
 }
 
+////// Section five End /////
+
+///// Section six START /////
 .six {
   .six__info_card {
     h2 {
@@ -468,6 +471,44 @@
           display: block;
         }
       }
+    }
+  }
+}
+
+//// Section six END ////
+
+///// Section seven START //////
+
+.seven {
+  .wrap {
+    max-width: 950px;
+  }
+  color: abstracts.$ind;
+  padding: 4rem 0;
+  background-color: abstracts.$mYellow;
+  .mission__card {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    h3 {
+      position: relative;
+      padding-bottom: 0.5rem;
+      margin: 0 0 1rem;
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        height: 4px;
+        background-color: abstracts.$ind;
+        width: 100%;
+        bottom: 0;
+        right: 0;
+      }
+    }
+    p {
+      color: black;
     }
   }
 }
