--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,21 @@ html {
   font-size: 1.125rem;
 }
 
+.seven h3 {
+  font-family: "Fjalla One", sans-serif;
+  font-size: 3.625rem;
+}
+.seven p {
+  font-size: 1.25rem;
+}
+.seven a {
+  font-size: 1.125rem;
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+  margin-top: 1.5rem;
+}
+
 header {
   background-color: #465775;
   padding-bottom: 0.5rem;
