--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -122,3 +122,22 @@ html {
     margin-top: 1.5rem;
   }
 }
+
+.eight {
+  background-color: abstracts.$ind;
+  padding: 4rem 0;
+  .wrap {
+    max-width: 550px;
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      input {
+        width: 100%;
+      }
+      textarea {
+        width: 80%;
+      }
+    }
+  }
+}
