--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -132,11 +132,34 @@ html {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      ::placeholder {
+        padding-left: 0.625rem;
+        font-size: 1.2rem;
+      }
       input {
         width: 100%;
+        padding: 1rem 1.25rem;
+        & + input {
+          margin-top: 1rem;
+        }
       }
       textarea {
-        width: 80%;
+        padding: 1rem 1.25rem;
+        margin-top: 1rem;
+        width: 100%;
+        ::placeholder {
+          padding-left: 0.625rem;
+        }
+        @include abstracts.mq(550px) {
+          width: 80%;
+        }
+      }
+      button {
+        margin-top: 1rem;
+        padding: 0.5rem 2rem;
+        text-transform: uppercase;
+        background-color: abstracts.$mYellow;
+        font-size: 1.125rem;
       }
     }
   }
