--- a/css/main.css
+++ b/css/main.css
@@ -176,8 +176,12 @@ html {
 }
 .eight .wrap {
   max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .eight .wrap form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -212,6 +216,21 @@ html {
   text-transform: uppercase;
   background-color: #ffe347;
   font-size: 1.125rem;
+}
+.eight .wrap img {
+  margin-top: 8rem;
+  width: 200px;
+}
+.eight .wrap .social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 3rem;
+}
+.eight .wrap .social img {
+  width: 25px;
+  margin-top: 0;
 }
 
 header {
