--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -128,7 +128,11 @@ html {
   padding: 4rem 0;
   .wrap {
     max-width: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     form {
+      width: 100%;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -160,6 +164,21 @@ html {
         text-transform: uppercase;
         background-color: abstracts.$mYellow;
         font-size: 1.125rem;
+      }
+    }
+    img {
+      margin-top: 8rem;
+      width: 200px;
+    }
+    .social {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      margin-top: 3rem;
+      img {
+        width: 25px;
+        margin-top: 0;
       }
     }
   }
