--- a/css/main.css
+++ b/css/main.css
@@ -736,7 +736,7 @@ nav:hover {
 }
 @media (min-width: 750px) {
   .six .wrap .lower2 {
-    background-image: url("/images/lower2.jpg");
+    background-image: url("../images/lower2.jpg");
     background-position: center;
     background-size: cover;
   }
